--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 IDEAS:
-Blackberry/iPhone app that silences phone according to a schedule
+Blackboerry/iPhone app that silences phone according to a schedule
+more
